[gd_scene load_steps=5 format=3 uid="uid://cl5oes5bechlx"]

[ext_resource type="Texture2D" uid="uid://b8imyqqffd7xe" path="res://Asset/ui/ui_no_outline.png" id="1_65y2l"]
[ext_resource type="Texture2D" uid="uid://d21ge6bmgn8yn" path="res://Asset/ui/t_pond.png" id="2_bpd2a"]
[ext_resource type="Script" uid="uid://bsnpiln475f1f" path="res://Script/sub_ui_interaction.gd" id="2_ppha5"]

[sub_resource type="LabelSettings" id="LabelSettings_bpd2a"]
font_size = 54

[node name="SubUIInteraction" type="NinePatchRect"]
clip_contents = true
offset_right = 128.0
offset_bottom = 128.0
mouse_filter = 1
texture = ExtResource("1_65y2l")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64
script = ExtResource("2_ppha5")
interaction_colors = Dictionary[String, Color]({
"b_bush": Color(0.223103, 0.223103, 0.223103, 1),
"b_pond": Color(0.156863, 0.615686, 0.831373, 1),
"t_fire": Color(1, 0.294118, 0, 1),
"t_pond": Color(0.627451, 0.12549, 0.941176, 1)
})

[node name="InteractionSymbol" type="TextureRect" parent="."]
modulate = Color(1.75196e-05, 0.466798, 0.830981, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -46.0
offset_right = 148.0
offset_bottom = 82.0
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_bpd2a")

[node name="Label" type="Label" parent="InteractionSymbol"]
layout_mode = 0
offset_left = 152.957
offset_top = 25.4571
offset_right = 740.957
offset_bottom = 100.457
text = "독 연못: 초당 1 틱대미지"
label_settings = SubResource("LabelSettings_bpd2a")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
